# breathe-paper

./: .gitignore  Audio_Preprocessing.ipynb  Database_Statistics.ipynb  Inference.ipynb  README.md  Test_Environment.ipynb  environment.yml  pyproject.toml
binder/: postBuild
breathe/: __init__.py  audio_utils.py  inference_utils.py
breathe/dataloaders/: __init__.py  datasetnormal.py
breathe/models/: __init__.py  densenet.py
data/: metadata.csv
