[tool.poetry]
name = "breathe"
version = "0.1.0"
description = ""
authors = ["Theodore Aptekarev <aptekath@bgu.ac.il>"]

[tool.poetry.dependencies]
python = "~3.9"
matplotlib = "^3.5.1"
Pillow = "^9.0.1"
torch = "^1.10.2"
SoundFile = "^0.10.3"
pandas = "^1.4.1"
learn = "^1.0.0"
SQLAlchemy = "^1.4.31"
progressbar = "^2.5"
torchaudio = "^0.10.2"
torchvision = "^0.11.3"
tensorboardX = "^2.5"
tqdm = "^4.62.3"
bandit = "^1.7.4"
scikit-learn = "^1.0.2"
requests = "^2.27.1"
librosa = "^0.9.1"
numpy = "^1.22.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
